<resources>
    <string name="app_name">UMPBusBookingSystem</string>
    <string name="email">student/driver/admin ID</string>
    <string name="select">Select Item</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="full_name">Full Name</string>
    <string name="matric_id">Matric ID</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="contact">CONTACT</string>
    <string name="profile">PROFILE</string>
    <string name="booking">BOOKING</string>
    <string name="schedule">SCHEDULE</string>
    <string name="report">REPORT</string>
    <string name="back">BACK</string>
    <string name="driver_id">Driver ID</string>
    <string name="fullName">Full Name:</string>
</resources>